fix: text align of section title

--- a/style.scss
+++ b/style.scss
@@ -370,7 +370,7 @@ $black: #2b2a29;
       font-weight: 700;
       font-size: 36px;
       text-transform: uppercase;
-      text-align: center;
+      text-align: left;
       color: #000;
 
       &--light {
